--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 #logging.level.com.nowcoder.community=debug
 #logging.file.name=d:/work/data/nowcoder/community.log
 
-#MailProperties
+# MailProperties
 spring.mail.host=smtp.sina.com
 spring.mail.port=465
 spring.mail.username=l2212648470@sina.com
@@ -32,3 +32,60 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 
 #  community
 community.path.domain=http://localhost:8080
+
+community.path.upload=d:/work/data/upload
+
+#RedisProperties
+spring.redis.database = 11
+spring.redis.host = localhost
+spring.redis.port = 6379
+
+#KafkaProperties
+spring.kafka.bootstrap-servers = localhost:9092
+spring.kafka.consumer.group-id = test-consumer-group
+spring.kafka.consumer.enable-auto-commit = true
+spring.kafka.consumer.auto-commit-interval = 3000
+
+#ElasticsearchProperties
+spring.data.elasticsearch.cluster-name = nowcoder
+spring.data.elasticsearch.cluster-nodes = 127.0.0.1:9300
+
+# TaskExecutionProperties
+spring.task.execution.pool.core-size=5
+spring.task.execution.pool.max-size=15
+spring.task.execution.pool.queue-capacity=100
+
+# TaskSchedulingProperties
+spring.task.scheduling.pool.size = 5
+
+# QuartzProperties
+spring.quartz.job-store-type=jdbc
+spring.quartz.scheduler-name=communityScheduler
+spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+spring.quartz.properties.org.quartz.jobStore.class=org.springframework.scheduling.quartz.LocalDataSourceJobStore
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+spring.quartz.properties.org.quartz.jobStore.isClustered=true
+spring.quartz.properties.org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
+spring.quartz.properties.org.quartz.threadPool.threadCount=5
+
+# wk
+wk.image.command = d:/work/wkhtmltopdf/bin/wkhtmltoimage
+wk.image.storage = d:/work/data/wk-image
+
+# qiniu
+qiniu.key.access=oFaXcCM7zvAiTETJVAo5JpDrNujcA8oGFsJiFxVD
+qiniu.key.secret=uroyO1l_lmyLzqjxKfcYMt2y0UETv57LB5cMaiv4
+
+qiniu.bucket.header.name=header55
+qiniu.bucket.header.url=http://rfq443tm7.hd-bkt.clouddn.com
+
+qiniu.bucket.share.name=image55
+qiniu.bucket.share.url=http://rfq4pn4c3.hd-bkt.clouddn.com
+
+# caffeine
+caffeine.posts.max-size=15
+caffeine.posts.expire-seconds=180
+
+# actuator
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=info , cache
